--- a/mp-demo/src/main/resources/application.yaml
+++ b/mp-demo/src/main/resources/application.yaml
@@ -11,3 +11,8 @@ logging:
     dateformat: HH:mm:ss
 mybatis:
   mapper-locations: classpath*:mapper/*.xml
+mybatis-plus:
+  type-aliases-package: com.itheima.mp.domain.po
+  global-config:
+      db-config:
+          id-type: auto
