--- a/mp-demo/src/main/resources/application.yaml
+++ b/mp-demo/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/mp?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://127.0.0.1:3306/mp?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai&rewriteBatchedStatements=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 1234
@@ -15,7 +15,7 @@ mybatis-plus:
   type-aliases-package: com.itheima.mp.domain.po
   global-config:
       db-config:
-          id-type: auto
+        id-type: auto
 
 #swagger相关配置
 knife4j:
