购物车，商品功能拆分

--- a/hmall/cart-service/src/main/resources/application.yaml
+++ b/hmall/cart-service/src/main/resources/application.yaml
@@ -1,17 +1,15 @@
 server:
-  port: 8080
+  port: 8082
 spring:
   application:
-    name: hm-service
-    autoconfigure:
-      exclude:
-        - com.alibaba.cloud.nacos.NacosDiscoveryAutoConfiguration
-        - com.alibaba.cloud.nacos.ribbon.RibbonNacosAutoConfiguration
-
+    name: cart-service
+    cloud:
+      nacos:
+        server-addr: 192.168.100.128:8848
   profiles:
     active: dev
   datasource:
-    url: jdbc:mysql://${hm.db.host}:3306/hmall?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://${hm.db.host}:3306/hm-cart?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: ${hm.db.pw}
@@ -32,8 +30,8 @@ logging:
 knife4j:
   enable: true
   openapi:
-    title: 黑马商城接口文档
-    description: "黑马商城接口文档"
+    title: 黑马商城购物车接口文档
+    description: "黑马商城购物车接口文档"
     email: zhanghuyi@itcast.cn
     concat: 虎哥
     url: https://www.itcast.cn
@@ -43,7 +41,7 @@ knife4j:
         group-name: default
         api-rule: package
         api-rule-resources:
-          - com.hmall.controller
+          - com.hmall.cart.controller
 hm:
   jwt:
     location: classpath:hmall.jks
