--- a/hmall/hm-gateway/src/main/resources/bootstrap.yaml
+++ b/hmall/hm-gateway/src/main/resources/bootstrap.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: cart-service
+    name: hm-gateway
   profiles:
     active: dev
   cloud:
@@ -9,9 +9,4 @@ spring:
       config:
         file-extension: yaml # 指定文件类型
         shared-configs: # 指定共享的配置
-          - data-id: jdbc-shared.yaml
           - data-id: jdbc-log.yaml
-          - data-id: jdbc-swagger.yaml
-      discovery:
-        # 禁用gRPC，使用HTTP连接
-        use-grpc: false
