--- a/hmall/trade-service/src/main/resources/application.yaml
+++ b/hmall/trade-service/src/main/resources/application.yaml
@@ -1,44 +1,14 @@
 server:
   port: 8085 #记得修改端口号，防止冲突
-spring:
-  application:
-    name: trade-service
-  cloud:
-    nacos:
-      server-addr: 192.168.100.128:8848
-  profiles:
-    active: dev
-  datasource:
-    url: jdbc:mysql://${hm.db.host}:3306/hm-trade?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: ${hm.db.pw}
-mybatis-plus:
-  configuration:
-    default-enum-type-handler: com.baomidou.mybatisplus.core.handlers.MybatisEnumTypeHandler
-  global-config:
-    db-config:
-      update-strategy: not_null
-      id-type: auto
-logging:
-  level:
-    com.hmall: debug
-  pattern:
-    dateformat: HH:mm:ss:SSS
-  file:
-    path: "logs/${spring.application.name}"
-knife4j:
-  enable: true
-  openapi:
-    title: 黑马商城交易管理接口文档
-    description: "黑马商城交易管理接口文档"
-    email: zhanghuyi@itcast.cn
-    concat: 虎哥
-    url: https://www.itcast.cn
-    version: v1.0.0
-    group:
-      default:
-        group-name: default
-        api-rule: package
-        api-rule-resources:
-          - com.hmall.trade.controller
+feign:
+  okhttp:
+    enabled: true
+  sentinel:
+    enabled: true
+
+hm:
+  swagger:
+    title: 交易服务接口文档
+    package: com.hmall.trade.controller
+  db:
+    database: hm-trade
