--- a/hmall/trade-service/src/main/resources/bootstrap.yaml
+++ b/hmall/trade-service/src/main/resources/bootstrap.yaml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: hm-service
+  profiles:
+    active: dev
   cloud:
     nacos:
       server-addr: 192.168.100.128:8848
@@ -9,3 +11,8 @@ spring:
         use-grpc: false
       config:
         file-extension: yaml
+        shared-configs:
+          - data-id: jdbc-shared.yaml
+          - data-id: jdbc-log.yaml
+          - data-id: jdbc-swagger.yaml
+          - data-id: shared-seata.yaml
