--- a/hmall/trade-service/src/main/resources/bootstrap.yaml
+++ b/hmall/trade-service/src/main/resources/bootstrap.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: hm-service
+    name: trade-service
   profiles:
     active: dev
   cloud:
@@ -16,3 +16,4 @@ spring:
           - data-id: jdbc-log.yaml
           - data-id: jdbc-swagger.yaml
           - data-id: shared-seata.yaml
+
