--- a/hmall/user-service/src/main/resources/bootstrap.yaml
+++ b/hmall/user-service/src/main/resources/bootstrap.yaml
@@ -1,8 +1,15 @@
 spring:
   application:
     name: user-service
+  profiles:
+    active: dev
   cloud:
     nacos:
       server-addr: 192.168.100.128:8848
       config:
         file-extension: yaml
+        shared-configs: # 指定共享的配置
+          - data-id: jdbc-shared.yaml
+          - data-id: jdbc-log.yaml
+          - data-id: jdbc-swagger.yaml
+          - data-id: shared-seata.yaml
