--- a/hmall/pay-service/src/main/resources/bootstrap.yaml
+++ b/hmall/pay-service/src/main/resources/bootstrap.yaml
@@ -13,6 +13,7 @@ spring:
           - data-id: jdbc-log.yaml
           - data-id: jdbc-swagger.yaml
           - data-id: shared-seata.yaml
+          - data-id: shared-rabbitMQ.yaml
       discovery:
         # 禁用gRPC，使用HTTP连接
         use-grpc: false
