--- a/hmall/user-service/src/main/resources/bootstrap.yaml
+++ b/hmall/user-service/src/main/resources/bootstrap.yaml
@@ -13,3 +13,4 @@ spring:
           - data-id: jdbc-log.yaml
           - data-id: jdbc-swagger.yaml
           - data-id: shared-seata.yaml
+          - data-id: shared-rabbitMQ.yaml
